--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="遇见Enchanted Club">
+    <meta name="author" content="Tomaotuiui">
 
-    <title>Stylish Portfolio - Start Bootstrap Theme</title>
+    <title>遇见Enchanted Club - 名牌</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
