--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="遇见Enchanted Club">
     <meta name="author" content="Tomaotuiui">
 
-    <title>遇见Enchanted Club - 名牌</title>
+    <title>遇见Enchanted Club - 名牌 - 尾巴</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
