--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>尾巴</h1>
+            <h1>尾巴,nice.</h1>
             <h3>欢迎来到遇见Club，我是魔法交换集市的尾巴。</h3>
             <br>
             <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
