--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="遇见Enchanted Club">
     <meta name="author" content="Tomaotuiui">
 
-    <title>遇见Enchanted Club - 名牌 - 尾巴</title>
+    <title>IBM - 名牌 - Toma</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>遇见Club</a>
+                <a href="#top" onclick=$("#menu-close").click();>IBM</a>
             </li>
             <li>
                 <a href="#top" onclick=$("#menu-close").click();>名牌</a>
@@ -62,7 +62,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>尾巴, nice code.</h1>
-            <h3>欢迎来到遇见Club，我是魔法交换集市的尾巴。</h3>
+            <h3>欢迎来到XX小课堂，我是Toma。</h3>
             <br>
             <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
         </div>
@@ -106,11 +106,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>遇见Enchanted Club</strong>
-                    </h4>
-                    <p>每周六下午四点到六点
-                        <br>间汇，柏威年, 大连</p>
-                        <img src="img/qr.png" >
+                    <h4><strong>Toma 小课堂</strong></h4>
+                    <p>每周五下午四点到六点
+                        <br>黄泥川, 大连</p>
+                        <!-- <img src="img/qr.png" > -->
                     <!-- <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
