--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>尾巴, nice code.</h1>
-            <h3>欢迎来到XX小课堂，我是Toma。</h3>
+            <h3>欢迎来到Toma小课堂，我是尾巴。</h3>
             <br>
             <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
         </div>
